Fix issue of hamburger button jumping down

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -4,7 +4,7 @@
 }
 
 #landingImage {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   object-fit: cover;
   position: absolute;
